[add] Sync Code

--- a/extra/src/main/resources/application.conf
+++ b/extra/src/main/resources/application.conf
@@ -23,10 +23,10 @@ odinson.indexDir = ${odinson.dataDir}/index
 odinson.extra {
     # processor to use for AnnotateText
     # choices: FastNLPProcessor, CluProcessor
-    processorType    = "CluProcessor"
-    #processorType     = "FastNLPProcessor"
-    rulesFile = /example/rules.yml
-    outputFile = ../example_extractions.jsonl
+    #processorType    = "CluProcessor"
+    processorType     = "CluProcessor"
+    rulesFile = /example/generated_rules.yml
+    outputFile = ../example_extractions_experiement.jsonl
 }
 
 odinson.index {
@@ -41,6 +41,10 @@ odinson.index {
     synchronizeOrderWithDocumentId = false
 
 }
+
+odinson.textDir = data/research/text
+odinson.docsDir = data/research/docs
+odinson.indexDir = data/research/index
 
 metadata {
     originalDocsDir = ""
