[add] Fixed a bug to match anchored words

--- a/extra/src/main/resources/application.conf
+++ b/extra/src/main/resources/application.conf
@@ -24,7 +24,7 @@ odinson.extra {
     # processor to use for AnnotateText
     # choices: FastNLPProcessor, CluProcessor
     #processorType    = "CluProcessor"
-    processorType     = "CluProcessor"
+    processorType     = "FastNLPProcessor"
     rulesFile = /example/generated_rules.yml
     outputFile = ../example_extractions_experiement.jsonl
 }
@@ -42,9 +42,9 @@ odinson.index {
 
 }
 
-odinson.textDir = data/research/text
-odinson.docsDir = data/research/docs
-odinson.indexDir = data/research/index
+odinson.textDir = data/PubMed/text
+odinson.docsDir = data/PubMed/docs
+odinson.indexDir = data/PubMed/index
 
 metadata {
     originalDocsDir = ""
