[add] Implement count table

--- a/extra/src/main/resources/application.conf
+++ b/extra/src/main/resources/application.conf
@@ -42,9 +42,9 @@ odinson.index {
 
 }
 
-odinson.textDir = extra/data/PubMed/text
-odinson.docsDir = extra/data/PubMed/docs
-odinson.indexDir = extra/data/PubMed/index
+odinson.textDir = extra/data/PubMedStress/text
+odinson.docsDir = extra/data/PubMedStress/docs
+odinson.indexDir = extra/data/PubMedStress/index
 
 metadata {
     originalDocsDir = ""
